--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,65 @@ html, body {
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #f9fcfb;
+    overflow-x: hidden;
+}
+
+.btn {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    width: 150px;
+    background-color: #3498db;
+    color: snow;
+    font-weight: 600;
+    padding: 4px 0;
+    border: 1px solid #666;
+    border-radius: 8px;
+    box-shadow: -3px 3px 4px #888, inset 0 0 8px #888;
+}
+
+.btn:hover {
+    scale: .98;
+}
+
+.btn:active {
+    box-shadow: inset 0 0 16px #888;
+}
+
+.blog {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 30px;
+    border-left: 4px solid #3498db;
+    width: 40%;
+    height: 100vh;
+    overflow-y: auto;
+    position: absolute;
+    right: 0;
+
+    z-index: 1;
+    transition: right 500ms;
+}
+
+.close {
+    position: absolute;
+    color: snow;
+    background-color: #c03535;
+    top: 10px;
+    left: 10px;
+}
+
+.hidden {
+    right: -40%;
+}
+
+h2 {
+    text-align: center;
 }
 
 .form-container {
